...
                                                                <constraint firstAttribute="height" constant="14" id="vZl-VO-bWH"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите год" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Ne-tP-aFu">
                                                            <rect key="frame" x="0.0" y="24" width="309" height="30"/>
                                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                                                            <connections>
                                                                <outlet property="delegate" destination="bKs-E0-fKK" id="KnD-wb-32o"/>
...
                                                                <constraint firstAttribute="height" constant="14" id="XX4-mw-0UQ"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите производителя" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6jV-fK-zUH">
                                                            <rect key="frame" x="0.0" y="24" width="309" height="30"/>
                                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                                                            <connections>
                                                                <outlet property="delegate" destination="bKs-E0-fKK" id="gl0-sH-Mi4"/>
...
                                                                <constraint firstAttribute="height" constant="14" id="vsr-cg-e3W"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите модель" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yxg-uF-k05">
                                                            <rect key="frame" x="0.0" y="24" width="309" height="30"/>
                                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                                                            <connections>
                                                                <outlet property="delegate" destination="bKs-E0-fKK" id="iL6-8s-9uU"/>
...
                                                                <constraint firstAttribute="height" constant="14" id="gCZ-AP-AA2"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите кузов" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HcV-Of-hJ9">
                                                            <rect key="frame" x="0.0" y="24" width="309" height="30"/>
                                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                            <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                                            <connections>
                                                                <outlet property="delegate" destination="bKs-E0-fKK" id="0FL-y6-cfQ"/>
...
                    <navigationItem key="navigationItem" id="4kW-Cj-KjL">
                        <barButtonItem key="leftBarButtonItem" title="Отмена" id="p9f-li-O5O">
                            <connections>
                                <action selector="cancelButton:" destination="bKs-E0-fKK" id="Erf-r8-Y6p"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Сохранить" id="O2P-En-N4W">
                            <connections>
                                <segue destination="Ooq-Hp-wvO" kind="unwind" unwindAction="mainVCSegue:" id="OGQ-oi-EsS"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
