...
               }
        
        let camera = UIAlertAction(title: "Камера", style: .default) { _ in
            self.chooseImagepicker(source: .camera)
        }
        
        let automatic = UIAlertAction(title: "Автоматически", style: .default) { _ in
            guard let manufacturerField = self.manufacturerTextField.text, manufacturerField != "" else {
                print(" пусто ")
                self.manufacturerTextField.shake()
                self.manufacturerTextField.attributedPlaceholder = NSAttributedString(string: "Введите производителя", attributes: [NSAttributedString.Key.foregroundColor: UIColor.red])
                return
            }
...
